* Implement updating of existing task * Fix flaky UI bug * Display progress dialog with dummy data

--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -13,5 +13,11 @@
     <string name="text_details">Details</string>
     <string name="desc_image">Image</string>
     <string name="text_task_created">Task Created</string>
+    <string name="text_task_6">Task 6</string>
+    <string name="text_task_5">Task 5</string>
+    <string name="text_task_4">Task 4</string>
+    <string name="text_task_3">Task 3</string>
+    <string name="text_task_2">Task 2</string>
+    <string name="text_task_1">Task 1</string>
 
 </resources>
